[gd_scene load_steps=3 format=3 uid="uid://cmxee5ywoanvl"]

[ext_resource type="Script" path="res://src/player-list/PlayerList.gd" id="1_fcu3v"]
[ext_resource type="Texture2D" uid="uid://78gth2yfhuwk" path="res://assets/cancel.png" id="2_whg6t"]

[node name="PlayerList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fcu3v")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(0, 36)
size = Vector2i(493, 162)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.csv")

[node name="Back" type="TextureButton" parent="."]
offset_right = 128.0
offset_bottom = 128.0
texture_normal = ExtResource("2_whg6t")
flip_h = true

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 144.0
grow_horizontal = 2
grow_vertical = 2

[node name="POR" type="RichTextLabel" parent="TabContainer"]
layout_mode = 2

[node name="DIF" type="RichTextLabel" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="CEN" type="RichTextLabel" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="ATT" type="RichTextLabel" parent="TabContainer"]
visible = false
layout_mode = 2

[connection signal="confirmed" from="FileDialog" to="." method="_on_file_dialog_confirmed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
